--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,51 @@
 asgiref==3.7.2
+blinker==1.6.3
+cachetools==5.3.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
+click==8.1.7
+cloudinary==1.37.0
+colorama==0.4.6
+coverage==7.3.2
 defusedxml==0.7.1
+distlib==0.3.6
+dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2
 django-allauth==0.41.0
 django-crispy-forms==1.14.0
+filelock==3.12.2
+Flask==2.1.3
+Flask-SQLAlchemy==2.5.1
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+greenlet==3.0.1
+gspread==5.10.0
+gunicorn==21.2.0
 idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 oauthlib==3.2.2
+packaging==23.2
 pillow==10.2.0
+pipenv==2023.7.4
+platformdirs==3.8.1
+psycopg2==2.9.9
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 python3-openid==3.2.0
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+SQLAlchemy==1.4.46
 sqlparse==0.4.4
+stripe==8.2.0
+typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
+virtualenv==20.23.1
+virtualenv-clone==0.5.7
+Werkzeug==2.2.2
