--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2
 django-allauth==0.41.0
+django-countries==7.5.1
 django-crispy-forms==1.14.0
 filelock==3.12.2
 Flask==2.1.3
