--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 blinker==1.6.3
+boto3==1.34.48
+botocore==1.34.48
 cachetools==5.3.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -14,6 +16,7 @@ Django==3.2
 django-allauth==0.41.0
 django-countries==7.5.1
 django-crispy-forms==1.14.0
+django-storages==1.14.2
 filelock==3.12.2
 Flask==2.1.3
 Flask-SQLAlchemy==2.5.1
@@ -24,6 +27,7 @@ gunicorn==20.1.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.3
 oauthlib==3.2.2
 packaging==23.2
@@ -33,18 +37,20 @@ platformdirs==3.8.1
 psycopg2==2.9.9
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+s3transfer==0.10.0
 six==1.16.0
 SQLAlchemy==1.4.46
 sqlparse==0.4.4
 stripe==8.2.0
 typing_extensions==4.9.0
 tzdata==2023.4
-urllib3==2.1.0
+urllib3==2.0.7
 virtualenv==20.23.1
 virtualenv-clone==0.5.7
 Werkzeug==2.2.2
